--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -23,4 +21,9 @@ li a {
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
+}
+
+#active-tab {
+    background-color: #111;
+    text-emphasis: emphasis; 
 }
