--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+body {
+    font-family: Helvetica, sans-serif;
+    margin: 0px; 
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #444;
 }
 
 li {
@@ -16,6 +21,8 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 1.1em;
+    font-weight: 100;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -24,6 +31,27 @@ li a:hover {
 }
 
 #active-tab {
-    background-color: #111;
-    text-emphasis: emphasis; 
+    background-color: rgb(0, 0, 0);
+}
+#active-tab a{
+    font-weight: 800;
+}
+
+h1 {
+    font-family: 'Yatra One', serif;
+    font-weight: 900;
+    font-size: 4em;
+    text-align: center;
+    color: #444;
+    margin-top: .5em;
+    margin-bottom: 0em; 
+}
+
+h2 {
+    font-family: 'Libre Baskerville', serif;
+}
+
+#main {
+    margin-left: 2em;
+    margin-right: 2em;
 }
