--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -24,17 +24,6 @@ https: //www.outsystems.com/blog/posts/css-vertical-align/
 https: //css-tricks.com/snippets/css/complete-guide-grid/
 */
 
-
-.normal {
-    height: 250px;
-    line-height: 250px;
-}
-
-.colorblind {
-    height: 75px;
-    line-height: 75px;
-}
-
 #target {
     width: 95%; 
     margin: auto;
@@ -45,17 +34,17 @@ https: //css-tricks.com/snippets/css/complete-guide-grid/
     color:black
 }
 
-.columns {
-    float: left;
-    width: 21%; /*Change this depending on number of columns*/
-    padding: 0%;
-    margin: .5%;
-    height: 100%;
-}
-
 .form-column{
     float: left;
     width: 50%;
+}
+
+.lock {
+    float: right;
+}
+
+.edit-color {
+    float: left;
 }
 
 /* Color and Images for Project Containers 
