--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -20,8 +20,12 @@ body {
     text-align: center;
     color: #222;
     width: 95%; 
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+    text-align: justify;
+}
 
 
 form {
