--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -20,12 +20,13 @@ body {
     text-align: center;
     color: #222;
     font-family: Arial, Helvetica, sans-serif;
+    width: 95%; 
+    margin: auto; 
 }
 
 p {
     text-align: justify;
     font-size: .8em;
-    width: 95%; 
 }
 
 .break {
@@ -37,7 +38,6 @@ p {
 form {
     display: inline-block; 
     font-size: .8em;
-    width: 95%; 
 }
 /* Sizing for Project Containers - use js to edit. 
 Also, probably need to change all this to grid layout 
@@ -47,7 +47,6 @@ https: //css-tricks.com/snippets/css/complete-guide-grid/
 
 #target {
     margin: auto;
-    width: 95%; 
 }
 
 .lbl {
