--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -9,8 +9,16 @@ label {
     text-align: right;
 }
 
+label .c1 {
+    text-align: right;
+}
+
 .c2 span {
     display: inline-block;
+    text-align: left;
+}
+
+label .c1 {
     text-align: left;
 }
 
