--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -37,6 +37,8 @@ body {
 
 .export {
     text-align: left;
+    float: left;
+    width: 40%; 
 }
 
 p {
@@ -44,6 +46,11 @@ p {
     font-size: .9em;
     background-color: #eee;
     padding: 1em; 
+}
+
+#export_text {
+    width: 40%; 
+    float: left;
 }
 
 .break {
