--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -35,10 +35,10 @@ body {
     width: 70%; 
 }
 
-.export_form {
+#export_form {
     text-align: left;
     float: left;
-    width: 40%; 
+    width: 50%; 
 }
 
 p {
@@ -49,7 +49,7 @@ p {
 }
 
 #export_text {
-    width: 40%; 
+    width: 50%; 
     float: left;
 }
 
